kubernetes/voter-client-app/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voter-client
  labels:
    app: client
  name: client
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  selector:
    app: client
