kubernetes/voter-client-app/ingress-istio-client.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  namespace: voter-client
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: client
          servicePort: 80
